--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,13 @@
 [project]
 name = "flask-tutorial"
 version = "0.1.0"
-description = "Add your description here"
+description = "Miguel Grinberg flask tutorial"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "flask>=3.0.3",
+    "python-dotenv>=1.0.1",
+]
 
 [build-system]
 requires = ["hatchling"]
