--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "flask>=3.0.3",
     "python-dotenv>=1.0.1",
+    "flask-wtf>=1.2.2",
 ]
 
 [build-system]
