--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "flask>=3.0.3",
     "python-dotenv>=1.0.1",
     "flask-wtf>=1.2.2",
+    "flask-sqlalchemy>=3.1.1",
+    "flask-migrate>=4.0.7",
 ]
 
 [build-system]
@@ -21,3 +23,4 @@ dev-dependencies = [
 
 [tool.taskipy.tasks]
 dev = "flask run --debug"
+shell = "flask shell"
