--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "flask-wtf>=1.2.2",
     "flask-sqlalchemy>=3.1.1",
     "flask-migrate>=4.0.7",
+    "flask-login>=0.6.3",
+    "email-validator>=2.2.0",
 ]
 
 [build-system]
@@ -24,3 +26,6 @@ dev-dependencies = [
 [tool.taskipy.tasks]
 dev = "flask run --debug"
 shell = "flask shell"
+
+[tool.ruff]
+exclude = ["migrations"]
