--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,11 +21,16 @@ build-backend = "hatchling.build"
 [tool.uv]
 dev-dependencies = [
     "taskipy>=1.14.0",
+    "ruff>=0.7.1",
+    "aiosmtpd>=1.4.6",
 ]
 
 [tool.taskipy.tasks]
 dev = "flask run --debug"
 shell = "flask shell"
+format = "task ruff_format && task ruff_sort_imports"
+ruff_format = "ruff format"
+ruff_sort_imports = "ruff check --select I --fix"
 
 [tool.ruff]
 exclude = ["migrations"]
