--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "flask-migrate>=4.0.7",
     "flask-login>=0.6.3",
     "email-validator>=2.2.0",
+    "flask-mail>=0.10.0",
+    "pyjwt>=2.10.1",
 ]
 
 [build-system]
